# dd-sdk-android

./: .codecov.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.gitlab  LICENSE-3rdparty.csv  MIGRATION.MD  Migrating_To_1.0.0.md  NOTICE  README.md  ZEN.md  bitrise.yml  browser_sdk_mobile_sdk_records_flow.mmd  build.gradle.kts  check_sr_output.py  check_sr_payloads.sh  code-coverage.datadog.yml  codecov.sh  consumer-rules.pro  create_avds.sh  create_github_installation_token.sh  ddcoverage.py  detekt.yml  detekt_custom.yml  detekt_custom_general.yml  detekt_custom_safe_calls.yml  detekt_custom_unsafe_calls.yml  detekt_test_pyramid.yml  dogfood.py  githubwiki.py  gradle.properties  gradlew  gradlew.bat  license.template  local_ci.sh  mega_plan.md  (+24 more)
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
DatadogTimeseries/: build.gradle.kts  demo.sh  settings.gradle.kts
benchmark/: benchmark-proguard-rules.pro  build.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
ci/: Dockerfile.gitlab
compression-benchmark/: build.gradle.kts  run_benchmarks.py
dd-android-gradle-plugin/: build.gradle.kts
dd-sdk-android/: .gitignore  README.md  apiSurface  build.gradle.kts  clone_dd_trace.gradle.kts  clone_rum_schema.gradle.kts  consumer-rules.pro  generate_core_models.gradle.kts  generate_log_models.gradle.kts  generate_pokos.gradle.kts  generate_rum_models.gradle.kts  generate_telemetry_models.gradle.kts  generate_trace_models.gradle.kts  transitiveDependencies
dd-sdk-android-androidx/: README.md  apiSurface  build.gradle.kts
dd-sdk-android-androidx-fragment/: README.md  apiSurface
dd-sdk-android-bridge/: README.md  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-coil/: README.md  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-compose/: README.md  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-core/: BackgroundThreads.md  README.md  build.gradle.kts  transitiveDependencies
dd-sdk-android-fresco/: README.md  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-glide/: README.md  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-internal/: build.gradle.kts  transitiveDependencies
dd-sdk-android-ktx/: README.md  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-navigation/: apiSurface  build.gradle.kts
dd-sdk-android-ndk/: CMakeLists.txt  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-ndk/src/main/cpp/: CMakeLists.txt  datadog-native-lib.cpp  datadog-native-lib.h
dd-sdk-android-ndk/src/main/cpp/model/: crash-log.cpp  crash_log.cpp  crash_log.h
dd-sdk-android-ndk/src/main/cpp/utils/: backtrace-handler.cpp  backtrace-handler.h  datetime-utils.cpp  datetime.cpp  datetime.h  file-utils.h  fileutils.cpp  format-utils.cpp  signal-monitor.c  signal-monitor.h  string-utils.cpp  stringutils.cpp  stringutils.h
dd-sdk-android-ndk/src/test/cpp/: CMakeLists.txt  integration-tests.cpp  test-crash-log.cpp  test-format-utils.cpp  test-generate-backtrace.cpp  test-signal-monitor.cpp  test-utils.h  test_datetime_utils.cpp  test_generate_backtrace.cpp  test_utils.cpp  test_utils.h
dd-sdk-android-okhttp/: apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-rx/: README.md  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-session-replay/: build.gradle.kts  transitiveDependencies
dd-sdk-android-sqldelight/: README.md  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-sqlite/: README.md  apiSurface  build.gradle.kts
dd-sdk-android-support-fragment/: apiSurface  build.gradle.kts
dd-sdk-android-timber/: README.md  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-android-tv/: README.md  apiSurface  build.gradle.kts  transitiveDependencies
dd-sdk-androidx-fragment/: README.md  apiSurface  build.gradle.kts
dd-sdk-androidx-fragments/: README.md  apiSurface
dd-sdk-support-fragment/: README.md  apiSurface  build.gradle.kts
dd-sdk-support-fragments/: README.md
dd-trace-api/: build.gradle.kts  transitiveDependencies
dd-trace-core/: build.gradle.kts  transitiveDependencies
docs/: Migrating_To_1.0.0.md  README.md  TROUBLESHOOTING.md  advanced_troubleshooting.md  coil_integration.md  configure_android_sdk.md  configure_rum_android_sdk.md  core-architecture.md  fresco_integration.md  gdpr.md  glide_integration.md  integrated_libraries_android.md  kotlin_extensions.md  log_collection.md  mobile_data_collected.md  native_crash_collection.md  rum_collection.md  rum_getting_started.md  rum_mobile_vitals.md  sdk_benchmarks.md  sdk_initialization.md  sdk_performance.md  timber_integration.md  trace_collection.md  troubleshooting_android.md  web_view_tracking.md
features/dd-sdk-android-ndk-tracer/src/main/cpp/: CMakeLists.txt  datadog-tracer-native-lib.cpp
features/dd-sdk-android-ndk/src/main/cpp/: CMakeLists.txt  datadog-native-lib.cpp  datadog-native-lib.h  datadog-ndk.cpp  datadog-ndk.h
features/dd-sdk-android-ndk/src/main/cpp/model/: crash-log.h
features/dd-sdk-android-ndk/src/main/cpp/utils/: backtrace-handler.cpp  backtrace-handler.h  datetime-utils.cpp  datetime-utils.h  file-utils.cpp  signal-monitor.c  signal-monitor.h  string-utils.cpp  string-utils.h
features/dd-sdk-android-rum/src/main/cpp/: CMakeLists.txt  datadog_profiling.cpp
gradle/: libs.versions.toml
instrumented/nightly-tests/src/main/cpp/: CMakeLists.txt  datadog-nightly-lib.cpp
sample/kotlin/src/main/cpp/: CMakeLists.txt  datadog-native-sample-lib.cpp
zstd/: CMakeLists.txt  build.gradle.kts  consumer-rules.pro  libzstd-jni.map
zstd/src/androidTest/kotlin/com/github/luben/zstd/: NoPoolTest.kt  ZstdIOExceptionTest.kt  ZstdOutputStreamTest.kt
zstd/src/main/cpp/: jni_fast_zstd.c  jni_zstd.c
zstd/src/main/java/com/github/luben/zstd/: SharedDictBase.java  Zstd.java  ZstdOutputStream.java  ZstdOutputStreamNoFinalizer.java
zstd/src/main/java/com/github/luben/zstd/util/: Native.java
(+7969 files in other folders)
